data/manifests/artifacthub/gitea/gitea/027_deployment_release-name-gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-gitea
  namespace: default
  annotations: null
  labels:
    helm.sh/chart: gitea-12.4.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.24.6
    version: 1.24.6
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: bb454c57a0d08076ac35d4f54b5de0cf4b6d442941fd825366a47173d035eb5b
      labels:
        helm.sh/chart: gitea-12.4.0
        app: gitea
        app.kubernetes.io/name: gitea
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: 1.24.6
        version: 1.24.6
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
      - name: gitea
        image: docker.gitea.com/gitea:1.24.6-rootless
        imagePullPolicy: IfNotPresent
        ports:
        - name: ssh
          containerPort: 2222
        - name: http
          containerPort: 3000
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 200
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 1
        resources: {}
        securityContext: {}
        volumeMounts:
        - name: temp
          mountPath: /tmp
        - name: data
          mountPath: /data
      volumes:
      - name: init
        secret:
          secretName: release-name-gitea-init
          defaultMode: 110
      - name: config
        secret:
          secretName: release-name-gitea
          defaultMode: 110
      - name: inline-config-sources
        secret:
          secretName: release-name-gitea-inline-config
      - name: temp
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: gitea-shared-storage
