data/manifests/artifacthub/gitea/gitea/028_statefulset_release-name-postgresql-ha-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-postgresql-ha-postgresql
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-ha-16.3.2
    app.kubernetes.io/component: postgresql
    role: data
spec:
  replicas: 3
  podManagementPolicy: Parallel
  serviceName: release-name-postgresql-ha-postgresql-headless
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: postgresql
      role: data
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: postgresql-ha
        app.kubernetes.io/version: 17.6.0
        helm.sh/chart: postgresql-ha-16.3.2
        app.kubernetes.io/component: postgresql
        role: data
      annotations: null
    spec:
      automountServiceAccountToken: false
      affinity:
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: release-name
                  app.kubernetes.io/name: postgresql-ha
                  app.kubernetes.io/component: postgresql
              topologyKey: kubernetes.io/hostname
            weight: 1
        nodeAffinity: null
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: release-name-postgresql-ha
      hostNetwork: false
      hostIPC: false
      containers:
      - name: postgresql
        image: docker.io/bitnamilegacy/postgresql-repmgr:17.6.0-debian-12-r2
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        lifecycle:
          preStop:
            exec:
              command:
              - /pre-stop.sh
              - '25'
        envFrom: null
        ports:
        - name: postgresql
          containerPort: 5432
          protocol: TCP
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          exec:
            command:
            - /liveness-probe.sh
        readinessProbe:
          failureThreshold: 6
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          exec:
            command:
            - /readiness-probe.sh
        resources:
          limits:
            cpu: 375m
            ephemeral-storage: 2Gi
            memory: 384Mi
          requests:
            cpu: 250m
            ephemeral-storage: 50Mi
            memory: 256Mi
        volumeMounts:
        - name: empty-dir
          mountPath: /tmp
          subPath: tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/postgresql/conf
          subPath: app-conf-dir
        - name: empty-dir
          mountPath: /opt/bitnami/postgresql/tmp
          subPath: app-tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/repmgr/conf
          subPath: repmgr-conf-dir
        - name: empty-dir
          mountPath: /opt/bitnami/repmgr/tmp
          subPath: repmgr-tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/repmgr/logs
          subPath: repmgr-logs-dir
        - name: postgresql-creds
          mountPath: /opt/bitnami/postgresql/secrets/postgres-password
          subPath: postgres-password
        - name: postgresql-creds
          subPath: password
          mountPath: /opt/bitnami/postgresql/secrets/password
        - name: postgresql-creds
          subPath: repmgr-password
          mountPath: /opt/bitnami/postgresql/secrets/repmgr-password
        - name: pgpool-creds
          subPath: sr-check-password
          mountPath: /opt/bitnami/postgresql/secrets/sr-check-password
        - name: data
          mountPath: /bitnami/postgresql
        - name: scripts
          mountPath: /pre-stop.sh
          subPath: pre-stop.sh
        - name: scripts
          mountPath: /liveness-probe.sh
          subPath: liveness-probe.sh
        - name: scripts
          mountPath: /readiness-probe.sh
          subPath: readiness-probe.sh
      volumes:
      - name: empty-dir
        emptyDir: {}
      - name: scripts
        configMap:
          name: release-name-postgresql-ha-postgresql-scripts
          defaultMode: 493
      - name: postgresql-creds
        secret:
          secretName: release-name-postgresql-ha-postgresql
      - name: pgpool-creds
        secret:
          secretName: release-name-postgresql-ha-pgpool
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
