data/manifests/artifacthub/gitea/gitea/022_service_release-name-valkey-cluster-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-valkey-cluster-headless
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey-cluster
    app.kubernetes.io/version: 8.1.3
    helm.sh/chart: valkey-cluster-3.0.24
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: tcp-redis
    port: 6379
    targetPort: tcp-redis
  - name: tcp-redis-bus
    port: 16379
    targetPort: tcp-redis-bus
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: valkey-cluster
