data/manifests/artifacthub/gitea/gitea/025_service_release-name-gitea-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-gitea-ssh
  namespace: default
  labels:
    helm.sh/chart: gitea-12.4.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.24.6
    version: 1.24.6
    app.kubernetes.io/managed-by: Helm
  annotations: {}
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: ssh
    port: 22
    targetPort: 2222
    protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: release-name
