data/manifests/artifacthub/gitea/gitea/002_networkpolicy_release-name-postgresql-ha-postgresql.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-postgresql-ha-postgresql
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/version: 17.6.0
    helm.sh/chart: postgresql-ha-16.3.2
    app.kubernetes.io/component: postgresql
    role: data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: postgresql
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  - ports:
    - port: 5432
